// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs Tabs banVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column-large"
>
  <div>
    <div
      class="t-radio-group t-size-m t-radio-group--filled"
    >
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="normal"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          常规型
        </span>
      </label>
       
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="card"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          卡片型
        </span>
      </label>
      <div
        class="t-radio-group__bg-block"
        style="width: 0px; left: 0px;"
      />
    </div>
  </div>
   
  <div
    class="t-tabs"
  >
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        <div
          class="t-tabs__operations t-tabs__operations--left"
        >
          <transition-stub
            appear="true"
            mode="out-in"
            name="fade"
          />
        </div>
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <transition-stub
            appear="true"
            mode="out-in"
            name="fade"
          />
        </div>
        <div
          class="t-tabs__nav-container t-is-top"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap t-is-smooth"
              style="transform: translate(0px, 0);"
            >
              <div
                class="t-tabs__bar t-is-top"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content"
    >
      <div
        class="t-tab-panel"
      >
        <p
          style="padding: 25px;"
        >
          选项卡1的内容
        </p>
      </div>
       
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Tabs Tabs baseVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column-large"
>
  <div
    class="tdesign-demo-block-column"
  >
    <div
      class="t-tabs"
    >
      <div
        class="t-tabs__header t-is-top"
      >
        <div
          class="t-tabs__nav"
        >
          <div
            class="t-tabs__operations t-tabs__operations--left"
          >
            <transition-stub
              appear="true"
              mode="out-in"
              name="fade"
            />
          </div>
          <div
            class="t-tabs__operations t-tabs__operations--right"
          >
            <transition-stub
              appear="true"
              mode="out-in"
              name="fade"
            />
          </div>
          <div
            class="t-tabs__nav-container t-is-top"
          >
            <div
              class="t-tabs__nav-scroll"
            >
              <div
                class="t-tabs__nav-wrap t-is-smooth"
                style="transform: translate(0px, 0);"
              >
                <div
                  class="t-tabs__bar t-is-top"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-tabs__content"
      >
        <div
          class="t-tab-panel"
        >
          <p
            style="padding: 25px;"
          >
            选项卡1的内容，使用 t-tab-panel 渲染
          </p>
        </div>
         
        <div
          class="t-tab-panel"
          style="display: none;"
        >
          <p
            style="padding: 25px;"
          >
            选项卡2的内容，使用 t-tab-panel 渲染
          </p>
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="t-tabs"
    >
      <div
        class="t-tabs__header t-is-top"
      >
        <div
          class="t-tabs__nav"
        >
          <div
            class="t-tabs__operations t-tabs__operations--left"
          >
            <transition-stub
              appear="true"
              mode="out-in"
              name="fade"
            />
          </div>
          <div
            class="t-tabs__operations t-tabs__operations--right"
          >
            <transition-stub
              appear="true"
              mode="out-in"
              name="fade"
            />
          </div>
          <div
            class="t-tabs__nav-container t-is-top"
          >
            <div
              class="t-tabs__nav-scroll"
            >
              <div
                class="t-tabs__nav-wrap t-is-smooth"
                style="transform: translate(0px, 0);"
              >
                <div
                  class="t-tabs__bar t-is-top"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-tabs__content"
      >
        <div
          class="t-tab-panel"
        >
          <p
            style="padding: 25px;"
          >
            这是选项卡一的内容，使用 t-tabs 渲染
          </p>
        </div>
        <!---->
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs Tabs combinationVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column-large"
  style="width: 100%;"
>
  <div>
    <div
      class="t-radio-group t-size-m t-radio-group--filled"
    >
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="normal"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          常规型
        </span>
      </label>
       
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="card"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          卡片型
        </span>
      </label>
      <div
        class="t-radio-group__bg-block"
        style="width: 0px; left: 0px;"
      />
    </div>
  </div>
   
  <div
    class="t-tabs"
  >
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        <div
          class="t-tabs__operations t-tabs__operations--left"
        >
          <transition-stub
            appear="true"
            mode="out-in"
            name="fade"
          />
        </div>
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <transition-stub
            appear="true"
            mode="out-in"
            name="fade"
          />
        </div>
        <div
          class="t-tabs__nav-container t-is-top"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap t-is-smooth"
              style="transform: translate(0px, 0);"
            >
              <div
                class="t-tabs__bar t-is-top"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content"
    >
      <!---->
      <div
        class="t-tab-panel"
      >
        <p
          style="padding: 25px;"
        >
          选项卡2
        </p>
      </div>
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
    </div>
  </div>
</div>
`;

exports[`Tabs Tabs customVue demo works fine 1`] = `
<div
  class="t-tabs"
  style="width: 100%;"
>
  <div
    class="t-tabs__header t-is-top"
  >
    <div
      class="t-tabs__nav"
      style="min-height: 48px;"
    >
      <div
        class="t-tabs__operations t-tabs__operations--left"
      >
        <transition-stub
          appear="true"
          mode="out-in"
          name="fade"
        />
      </div>
      <div
        class="t-tabs__operations t-tabs__operations--right"
      >
        <transition-stub
          appear="true"
          mode="out-in"
          name="fade"
        />
        <div
          class="t-tabs__add-btn t-tabs__btn t-size-m"
        >
          <svg
            class="t-icon t-icon-add"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
      </div>
      <div
        class="t-tabs__nav-container t-tabs__nav--card t-is-top t-is-addable"
      >
        <div
          class="t-tabs__nav-scroll"
        >
          <div
            class="t-tabs__nav-wrap t-is-smooth"
            style="transform: translate(0px, 0);"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-tabs__content"
  >
    <div
      class="t-tab-panel"
    >
      <p
        style="padding: 25px;"
      >
        原有选项卡内容
      </p>
    </div>
    <!---->
  </div>
</div>
`;

exports[`Tabs Tabs iconVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column-large"
>
  <div>
    <div
      class="t-radio-group t-size-m t-radio-group--filled"
    >
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="normal"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          常规型
        </span>
      </label>
       
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="card"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          卡片型
        </span>
      </label>
      <div
        class="t-radio-group__bg-block"
        style="width: 0px; left: 0px;"
      />
    </div>
  </div>
   
  <div
    class="t-tabs"
  >
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        <div
          class="t-tabs__operations t-tabs__operations--left"
        >
          <transition-stub
            appear="true"
            mode="out-in"
            name="fade"
          />
        </div>
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <transition-stub
            appear="true"
            mode="out-in"
            name="fade"
          />
        </div>
        <div
          class="t-tabs__nav-container t-is-top"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap t-is-smooth"
              style="transform: translate(0px, 0);"
            >
              <div
                class="t-tabs__bar t-is-top"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content"
    >
      <div
        class="t-tab-panel"
      >
         
        <p
          style="padding: 25px;"
        >
          首页的内容
        </p>
      </div>
       
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Tabs Tabs operationVue demo works fine 1`] = `
<div
  class="t-tabs"
>
  <div
    class="t-tabs__header t-is-top"
  >
    <div
      class="t-tabs__nav"
      style="min-height: 48px;"
    >
      <div
        class="t-tabs__operations t-tabs__operations--left"
      >
        <transition-stub
          appear="true"
          mode="out-in"
          name="fade"
        />
      </div>
      <div
        class="t-tabs__operations t-tabs__operations--right"
      >
        <transition-stub
          appear="true"
          mode="out-in"
          name="fade"
        />
        <div
          class="t-tabs__add-btn t-tabs__btn t-size-m"
        >
          <svg
            class="t-icon t-icon-add"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
      </div>
      <div
        class="t-tabs__nav-container t-tabs__nav--card t-is-top t-is-addable"
      >
        <div
          class="t-tabs__nav-scroll"
        >
          <div
            class="t-tabs__nav-wrap t-is-smooth"
            style="transform: translate(0px, 0);"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="t-tabs__content"
  >
    <div
      class="t-tab-panel"
    >
      <p
        style="padding: 25px;"
      >
        原有选项卡内容
      </p>
    </div>
    <!---->
  </div>
</div>
`;

exports[`Tabs Tabs positionVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column-large"
>
  <div>
    <div
      class="t-radio-group t-size-m t-radio-group--filled"
    >
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="top"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          top
        </span>
      </label>
       
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="right"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          right
        </span>
      </label>
       
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="bottom"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          bottom
        </span>
      </label>
       
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="left"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          left
        </span>
      </label>
      <div
        class="t-radio-group__bg-block"
        style="width: 0px; left: 0px;"
      />
    </div>
  </div>
   
  <div
    class="t-tabs"
  >
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        <div
          class="t-tabs__operations t-tabs__operations--left"
        >
          <transition-stub
            appear="true"
            mode="out-in"
            name="fade"
          />
        </div>
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <transition-stub
            appear="true"
            mode="out-in"
            name="fade"
          />
        </div>
        <div
          class="t-tabs__nav-container t-is-top"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap t-is-smooth"
              style="transform: translate(0px, 0);"
            >
              <div
                class="t-tabs__bar t-is-top"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content"
    >
      <div
        class="t-tab-panel"
      >
        <p
          style="padding: 25px;"
        >
          选项卡1
        </p>
      </div>
       
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Tabs Tabs sizeVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column-large"
>
  <div
    class="tdesign-demo-block-column"
  >
    <div
      class="t-tabs"
    >
      <div
        class="t-tabs__header t-is-top"
      >
        <div
          class="t-tabs__nav"
        >
          <div
            class="t-tabs__operations t-tabs__operations--left"
          >
            <transition-stub
              appear="true"
              mode="out-in"
              name="fade"
            />
          </div>
          <div
            class="t-tabs__operations t-tabs__operations--right"
          >
            <transition-stub
              appear="true"
              mode="out-in"
              name="fade"
            />
          </div>
          <div
            class="t-tabs__nav-container t-is-top"
          >
            <div
              class="t-tabs__nav-scroll"
            >
              <div
                class="t-tabs__nav-wrap t-is-smooth"
                style="transform: translate(0px, 0);"
              >
                <div
                  class="t-tabs__bar t-is-top"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-tabs__content"
      >
        <div
          class="t-tab-panel"
        >
          <p
            style="padding: 25px;"
          >
            选项卡1
          </p>
        </div>
         
        <!---->
         
        <!---->
      </div>
    </div>
     
    <div
      class="t-tabs"
    >
      <div
        class="t-tabs__header t-is-top"
      >
        <div
          class="t-tabs__nav"
        >
          <div
            class="t-tabs__operations t-tabs__operations--left"
          >
            <transition-stub
              appear="true"
              mode="out-in"
              name="fade"
            />
          </div>
          <div
            class="t-tabs__operations t-tabs__operations--right"
          >
            <transition-stub
              appear="true"
              mode="out-in"
              name="fade"
            />
          </div>
          <div
            class="t-tabs__nav-container t-is-top"
          >
            <div
              class="t-tabs__nav-scroll"
            >
              <div
                class="t-tabs__nav-wrap t-is-smooth"
                style="transform: translate(0px, 0);"
              >
                <div
                  class="t-tabs__bar t-is-top"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-tabs__content"
      >
        <div
          class="t-tab-panel"
        >
          <p
            style="padding: 25px;"
          >
            选项卡1
          </p>
        </div>
         
        <!---->
         
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs Tabs themeVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column-large"
>
  <div
    class="tdesign-demo-block-column"
  >
    <div
      class="t-tabs"
    >
      <div
        class="t-tabs__header t-is-top"
      >
        <div
          class="t-tabs__nav"
        >
          <div
            class="t-tabs__operations t-tabs__operations--left"
          >
            <transition-stub
              appear="true"
              mode="out-in"
              name="fade"
            />
          </div>
          <div
            class="t-tabs__operations t-tabs__operations--right"
          >
            <transition-stub
              appear="true"
              mode="out-in"
              name="fade"
            />
          </div>
          <div
            class="t-tabs__nav-container t-is-top"
          >
            <div
              class="t-tabs__nav-scroll"
            >
              <div
                class="t-tabs__nav-wrap t-is-smooth"
                style="transform: translate(0px, 0);"
              >
                <div
                  class="t-tabs__bar t-is-top"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-tabs__content"
      >
        <div
          class="t-tab-panel"
        >
          <p
            style="padding: 25px;"
          >
            选项卡1
          </p>
        </div>
         
        <!---->
         
        <!---->
      </div>
    </div>
     
    <div
      class="t-tabs"
    >
      <div
        class="t-tabs__header t-is-top"
      >
        <div
          class="t-tabs__nav"
        >
          <div
            class="t-tabs__operations t-tabs__operations--left"
          >
            <transition-stub
              appear="true"
              mode="out-in"
              name="fade"
            />
          </div>
          <div
            class="t-tabs__operations t-tabs__operations--right"
          >
            <transition-stub
              appear="true"
              mode="out-in"
              name="fade"
            />
          </div>
          <div
            class="t-tabs__nav-container t-tabs__nav--card t-is-top"
          >
            <div
              class="t-tabs__nav-scroll"
            >
              <div
                class="t-tabs__nav-wrap t-is-smooth"
                style="transform: translate(0px, 0);"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-tabs__content"
      >
        <div
          class="t-tab-panel"
        >
          <p
            style="padding: 25px;"
          >
            选项卡1
          </p>
        </div>
         
        <!---->
         
        <!---->
      </div>
    </div>
  </div>
</div>
`;
